:construction: Equipment failure #wip

--- a/MLRecipes/FailurePrediction/equipment_failure.ipynb
+++ b/MLRecipes/FailurePrediction/equipment_failure.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8fe3e25a-cc49-4831-909c-6a05f3306f36",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f41d5b4a-2953-4574-83d7-43b6ef4a7957",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "4                  0  0.0               884  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1e75ce76-ece7-4dcd-b9e6-29c1de8d578b",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "(307751, 16)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2f3b31ed-f0c2-4b12-a033-fe24c347714d",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "(421, 15)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "75e7e17d-194f-40d4-a955-2f575e2a8196",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "(731, 15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ff6b30da-8fc3-44ed-9e2d-9b1ab795669f",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
        "(307751, 16)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2bfe3dab-c611-49ff-b7d9-d6cd740074ae",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a7a9563d-04ee-41ba-8b3f-69f3b65a4299",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "1                     421"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7dee27e1-8a71-4c39-acfc-2a214791c724",
    "metadata": {},
    "outputs": [
@@ -723,7 +723,7 @@
        "max      4151.700000           1.000000    2068.110000      15170.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "4a563c20-97b9-4877-8d24-37bc19815c2c",
    "metadata": {},
    "outputs": [],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "911bdd66-5b0b-41c6-ae4b-095f8d49fb20",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
        "4                  0  0.0               884        0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "09e0ac98-cd26-4c8c-b799-ca52421abab1",
    "metadata": {},
    "outputs": [],
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "500bc88d-e8e3-48e4-8642-74e500fe1ee6",
    "metadata": {},
    "outputs": [],
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "6b062132-f2ca-4c85-b9e2-b5901d8c0365",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "b6854b52-cea2-40c4-9028-6f6cf742407b",
    "metadata": {},
    "outputs": [],
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "60f749bb-6ba9-4782-8bbb-40373d2c92c5",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "d10c5bc5-6509-4f11-9d1b-efc3210a4454",
    "metadata": {},
    "outputs": [],
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "61e6d994-b236-4d2c-8eb5-cb34e194ce85",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "7cb5e989-9623-4a6e-b228-12b9e2f4e3af",
    "metadata": {},
    "outputs": [],
@@ -1083,9 +1083,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4e8d0b26-e995-4a50-bb57-2cb15ac4dbac",
+   "metadata": {},
+   "source": [
+    "### Expand the failure (target) window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "123fd2c5-a196-4d6a-95f1-705c37c1b283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_window = 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "498b6e5f-e04a-4906-bdbd-33a7dd022287",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort the data and reset the index\n",
+    "pd_data = pd_data.sort_values(by=['ID', 'DATE'], ascending=[True, True])\n",
+    "pd_data.reset_index(level=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5b6f76a2-b5c9-40ab-81d5-9ee048bda99e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new data frame that contains the failure records. Rename DATE to FAILURE_DATE\n",
+    "df_failure_thingy = pd_data[pd_data['EQUIPMENT_FAILURE'] == 1]\n",
+    "\n",
+    "df_failure_thingy = df_failure_thingy[['DATE', 'ID']]\n",
+    "\n",
+    "df_failure_thingy = df_failure_thingy.rename(index=str, columns={\"DATE\":\"FAILURE_DATE\"})\n",
+    "\n",
+    "pd_data = pd_data.sort_values(by=['ID'], ascending=[True])\n",
+    "\n",
+    "df_failure_thingy = df_failure_thingy.sort_values(by=['ID'], ascending=[True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5265814b-6a6f-4d31-91f2-9287a03c866b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Append the FAILURE_DATE to each ID.\n",
+    "pd_data = pd_data.merge(df_failure_thingy, on=['ID'], how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7d5506fe-5d5b-4dc7-81d8-5d3932d5d534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each record, calculate the number of days until failure.\n",
+    "pd_data = pd_data.sort_values(by=['ID', 'DATE'], ascending=[True, True])\n",
+    "\n",
+    "pd_data['FAILURE_DATE'] = pd.to_datetime(pd_data['FAILURE_DATE'])\n",
+    "pd_data['DATE'] = pd.to_datetime(pd_data['DATE'])\n",
+    "pd_data['C'] = pd_data['FAILURE_DATE'] - pd_data['DATE']\n",
+    "\n",
+    "pd_data['TIME_TO_FAILURE'] = pd_data['C'] / np.timedelta64(1, 'D')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5af5975e-971e-46a6-9565-150feabea432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean up and sort the records by ID and DATE\n",
+    "pd_data = pd_data.drop(columns=['index'])\n",
+    "pd_data = pd_data.sort_values(by=['ID', 'DATE'], ascending=[True, True])\n",
+    "pd_data.reset_index(inplace=True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91a04a39-c2c5-4f22-89f5-08090a6890ff",
+   "id": "cb292076-b190-40a7-a6ab-5427138980c5",
    "metadata": {},
    "outputs": [],
    "source": []
