:zap: Automate coc #wip

--- a/windows_games/clash_of_clans_grab_screen.ipynb
+++ b/windows_games/clash_of_clans_grab_screen.ipynb
@@ -43,7 +43,6 @@
    "outputs": [],
    "source": [
     "# Done by Frannecklp\n",
-    "\n",
     "import cv2\n",
     "import numpy as np\n",
     "import win32gui\n",
@@ -107,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "6370ba38-89ab-4446-a508-da0b1d673c41",
    "metadata": {},
    "outputs": [],
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "18813198-fa5d-46be-af8c-028db44203e4",
    "metadata": {},
    "outputs": [],
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "99ab63ac-2779-42a5-9ba7-52c73fd73539",
    "metadata": {},
    "outputs": [],
@@ -228,36 +227,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "38530913-fb30-4408-9848-98ce47ccd261",
+   "execution_count": 56,
+   "id": "9ecb4d80-9cd0-45d0-b9b3-de8c3acfb988",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyautogui.moveTo(clash_of_clans_loc)"
+    "def open_coc():\n",
+    "    \"\"\"\n",
+    "    Open clash of clans on bluestacks.\n",
+    "    \"\"\"\n",
+    "    pyautogui.moveTo(clash_of_clans_loc)\n",
+    "    pyautogui.click(clash_of_clans_loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "1ad8ae66-cb53-47cb-b1a6-7b06d834951d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyautogui.click(clash_of_clans_loc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "2d01bc3a-fa28-47f6-baf1-2dedc48832c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyautogui.click(clash_of_clans_loc)\n",
-    "\n",
-    "pyautogui.hotkey('ctrl','shift','2')\n",
-    "time.sleep(0.5)\n",
-    "pyautogui.click(okay_loc)"
+    "def exit_game():\n",
+    "    \"\"\"\n",
+    "    Exit clash of clans on bluestacks.\n",
+    "    \"\"\"\n",
+    "    # Click somewhere on the app\n",
+    "    pyautogui.click(clash_of_clans_loc)\n",
+    "    # Use the bluestacks hotkey to quit\n",
+    "    pyautogui.hotkey('ctrl','shift','2')\n",
+    "    # Click on Okay\n",
+    "    time.sleep(0.5)\n",
+    "    pyautogui.click(okay_loc)"
    ]
   },
   {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5882b151-f82d-45b5-a36f-15a3b8399af8",
    "metadata": {},
    "outputs": [],
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "2a023e42-4b56-4e2c-80ea-a29110baaedb",
    "metadata": {},
    "outputs": [],
@@ -298,8 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "149369e6-7103-4402-b859-f9b662817f20",
+   "execution_count": 29,
+   "id": "9ccd563a-04b9-4d41-98f7-37098f2f3c67",
    "metadata": {},
    "outputs": [
     {
@@ -308,38 +308,249 @@
      "text": [
       "C:\\Users\\patta\\anaconda3\\envs\\py37\\lib\\site-packages\\ipykernel_launcher.py:23: DeprecationWarning: The binary mode of fromstring is deprecated, as it behaves surprisingly on unicode inputs. Use frombuffer instead\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "img_rgb = grab_coc()\n",
+    "img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "314498d9-3496-41af-86a3-4353449b2b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_image(img_rgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e3bfa022-6f48-4459-ae0e-51b3081af0eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = cv2.imread('images/elixir_collector_real.png', 0)\n",
+    "w, h = template.shape[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "afcb32fc-a06e-429c-a42b-c084c1f04659",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_image(template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2ea1ddda-e1dd-4726-80e8-4f823f2ae641",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = cv2.matchTemplate(img_gray, template, cv2.TM_CCOEFF_NORMED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "13d6d41b-d8c1-45fd-8c2b-5d49cf9e8a7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([151, 151, 151, 152, 152, 152, 152, 152, 153, 153, 153, 153, 153,\n",
+      "       154, 154, 154, 154, 154, 155, 155, 155, 211, 211, 212, 212, 269,\n",
+      "       269, 270, 270, 540, 541], dtype=int64), array([ 813,  814,  815,  812,  813,  814,  815,  816,  812,  813,  814,\n",
+      "        815,  816,  812,  813,  814,  815,  816,  813,  814,  815,  400,\n",
+      "        401,  400,  401, 1072, 1073, 1072, 1073,  530,  530], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f197d322-fd90-4c10-87b6-af29f2d2888b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(813, 151)\n",
+      "(814, 151)\n",
+      "(815, 151)\n",
+      "(812, 152)\n",
+      "(813, 152)\n",
+      "(814, 152)\n",
+      "(815, 152)\n",
+      "(816, 152)\n",
+      "(812, 153)\n",
+      "(813, 153)\n",
+      "(814, 153)\n",
+      "(815, 153)\n",
+      "(816, 153)\n",
+      "(812, 154)\n",
+      "(813, 154)\n",
+      "(814, 154)\n",
+      "(815, 154)\n",
+      "(816, 154)\n",
+      "(813, 155)\n",
+      "(814, 155)\n",
+      "(815, 155)\n",
+      "(400, 211)\n",
+      "(401, 211)\n",
+      "(400, 212)\n",
+      "(401, 212)\n",
+      "(1072, 269)\n",
+      "(1073, 269)\n",
+      "(1072, 270)\n",
+      "(1073, 270)\n",
+      "(530, 540)\n",
+      "(530, 541)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(result)\n",
+    "demo_img = img_rgb.copy()\n",
+    "threshold = 0.5\n",
+    "loc = np.where(result >= threshold)\n",
+    "# print(loc)\n",
+    "for pt in zip(*loc[::-1]):\n",
+    "    print(pt)\n",
+    "    cv2.rectangle(demo_img, pt, (pt[0] + w, pt[1] + h), (0,0,255), 2)\n",
+    "    \n",
+    "show_image(demo_img)\n",
+    "# cv2.imwrite('images/res.png', img_rgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a7b65046-f65f-494f-a46a-1e7f635acb39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blue_stack_win_top_left = (267, 107)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a88001b6-ca9e-4f0b-8371-e5add70514ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.moveTo(267+813+w/2, 107+151+h/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5ae8bfa5-1fb8-4373-9858-17a8d7d428e7",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "1013"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "813+200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "4d6a864d-f60c-45c1-be82-ebd9b9186e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "img_rgb = grab_coc()\n",
-    "img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_BGR2GRAY)\n",
-    "template = cv2.imread('images/elixir_collector.jpg', 0)\n",
-    "w, h = template.shape[::-1]\n",
+    "img_gray = cv2.cvtColor(img_rgb, cv2.COLOR_BGR2GRAY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "d71e7f5a-592e-4c10-b75f-00e868a4f936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elixir_template = cv2.imread('images/elixir_collector_real.png', 0)\n",
+    "gold_template = cv2.imread('images/gold_collector_real.png', 0)\n",
+    "dark_elixir_template = cv2.imread('images/dark_elixir_collector_real.png', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "141d7057-469b-4526-aa5a-32927ca91be4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blue_stack_win_top_left = (267, 107)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "59aeffc9-e74f-43fa-94cd-a59d2480a585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_resource(template):\n",
+    "    \"\"\"\n",
+    "    Match the resource template and click on resource to collect it.\n",
+    "    \"\"\"\n",
+    "    w, h = template.shape[::-1]\n",
+    "    result = cv2.matchTemplate(img_gray, template, cv2.TM_CCOEFF_NORMED)\n",
+    "    threshold = 0.5\n",
+    "    loc = np.where(result >= threshold)\n",
     "\n",
-    "result = cv2.matchTemplate(img_gray, template, cv2.TM_CCOEFF_NORMED)\n",
-    "# print(result)\n",
-    "threshold = 0.8\n",
-    "loc = np.where(result >= threshold)\n",
-    "# print(loc)\n",
-    "for pt in zip(*loc[::-1]):\n",
-    "    cv2.rectangle(img_rgb, pt, (pt[0] + w, pt[1] + h), (0,0,255), 2)\n",
-    "cv2.imwrite('images/res.png',img_rgb)"
+    "    loc_pos = [pt for pt in zip(*loc[::-1])]\n",
+    "\n",
+    "    resource_loc = (loc_pos[0][0] + blue_stack_win_top_left[0] + w/2, loc_pos[0][1] + blue_stack_win_top_left[1] + h/2)\n",
+    "\n",
+    "    pyautogui.moveTo(resource_loc)\n",
+    "\n",
+    "    pyautogui.click(resource_loc)\n",
+    "    time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0dc8cabb-fa47-4999-ad78-a29567ddef63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for template in [elixir_template, gold_template, dark_elixir_template]:\n",
+    "    collect_resource(template)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b7e97c4-cde9-4244-94f8-c76e3caab04b",
+   "id": "fea58365-0cd3-441a-b798-0234e2b46a15",
    "metadata": {},
    "outputs": [],
    "source": []
