--- a/Julia/23_ranges.ipynb
+++ b/Julia/23_ranges.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2de6772a",
+   "id": "13f75eff",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eac20098",
+   "id": "d1cdbde5",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "12d17f3c",
+   "id": "62648ff9",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d218c36d",
+   "id": "fdde3e83",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "99c2c430",
+   "id": "20313056",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "94012eb6",
+   "id": "7cb2ff1f",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "10a9140b",
+   "id": "10a2de5c",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "36603447",
+   "id": "e1fefaa7",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5186be2b",
+   "id": "dea06e7b",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "750ac999",
+   "id": "e9225203",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4d7e9d4a",
+   "id": "6b9fc5b7",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c1079644",
+   "id": "de754bb4",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "28f13c91",
+   "id": "f25b0573",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b6af9487",
+   "id": "f2247646",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3fc3bd44",
+   "id": "3a34f47f",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "101b7baa",
+   "id": "512a014a",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "64f095a5",
+   "id": "25dd50e8",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9e7c2d84",
+   "id": "0434ad96",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "00604290",
+   "id": "c89d871f",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e4667a2e",
+   "id": "ede715a1",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ea67725f",
+   "id": "4a709f7e",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f9b2529d",
+   "id": "99bfae79",
    "metadata": {},
    "outputs": [
     {
@@ -474,8 +474,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "22ec2943",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2:2:20"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(stop=20, step=2, length=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "353f124d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100-element LinRange{Float64, Int64}:\n",
+       " 10.0,18.9899,27.9798,36.9697,45.9596,…,864.04,873.03,882.02,891.01,900.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LinRange(10, 900, 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4c647ebe",
+   "id": "b590eb5f",
    "metadata": {},
    "outputs": [],
    "source": []
