--- a/Julia/section_7_methods/55_function_like_objects.ipynb
+++ b/Julia/section_7_methods/55_function_like_objects.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,17 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: coeffs not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: coeffs not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] (::model{Int64})(x::Vector{Int64})\n",
+      "   @ Main ~/dev_root/my_learnings/Julia/55_function_like_objects.ipynb:5\n",
+      " [2] top-level scope\n",
+      "   @ ~/dev_root/my_learnings/Julia/55_function_like_objects.ipynb:1"
+     ]
     }
    ],
    "source": [
